<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/epcc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nomeView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/loginInsert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/nomeView"
        app:layout_constraintStart_toStartOf="@+id/nomeView"
        app:layout_constraintTop_toBottomOf="@+id/nomeView" />

    <EditText
        android:id="@+id/passwordInsert"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/loginInsert"
        app:layout_constraintStart_toStartOf="@+id/loginInsert"
        app:layout_constraintTop_toBottomOf="@+id/loginInsert" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/registar"
        app:layout_constraintEnd_toEndOf="@+id/passwordInsert"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passwordInsert"
        app:layout_constraintTop_toBottomOf="@+id/passwordInsert"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/backToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/voltarParaLogin"
        app:layout_constraintEnd_toEndOf="@+id/registerBtn"
        app:layout_constraintStart_toStartOf="@+id/registerBtn"
        app:layout_constraintTop_toBottomOf="@+id/registerBtn" />
</android.support.constraint.ConstraintLayout>