<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="169dp"
        android:layout_height="158dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/com_facebook_profile_picture_blank_square" />

    <TextView
        android:id="@+id/idTitulo"
        android:layout_width="0dp"
        android:layout_height="17dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        style="@style/titulos"
        android:text="@string/id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/idView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/idTitulo"
        app:layout_constraintStart_toStartOf="@+id/idTitulo"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/idTitulo" />

    <TextView
        android:id="@+id/nomeTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/nome"
        style="@style/titulos"
        app:layout_constraintEnd_toEndOf="@+id/idView"
        app:layout_constraintStart_toStartOf="@+id/idView"
        app:layout_constraintTop_toBottomOf="@+id/idView" />

    <TextView
        android:id="@+id/nomeView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/nomeTitulo"
        app:layout_constraintStart_toStartOf="@+id/nomeTitulo"
        app:layout_constraintTop_toBottomOf="@+id/nomeTitulo" />

    <TextView
        android:id="@+id/loginTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/login"
        style="@style/titulos"
        app:layout_constraintEnd_toEndOf="@+id/nomeView"
        app:layout_constraintStart_toStartOf="@+id/nomeView"
        app:layout_constraintTop_toBottomOf="@+id/nomeView" />

    <TextView
        android:id="@+id/loginView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/loginTitulo"
        app:layout_constraintStart_toStartOf="@+id/loginTitulo"
        app:layout_constraintTop_toBottomOf="@+id/loginTitulo" />

    <TextView
        android:id="@+id/passwordTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/password"
        style="@style/titulos"
        app:layout_constraintEnd_toEndOf="@+id/loginView"
        app:layout_constraintStart_toStartOf="@+id/loginView"
        app:layout_constraintTop_toBottomOf="@+id/loginView" />

    <TextView
        android:id="@+id/nivelTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/titulos"
        android:text="@string/nivel"
        app:layout_constraintEnd_toEndOf="@+id/passwordView"
        app:layout_constraintStart_toStartOf="@+id/passwordView"
        app:layout_constraintTop_toBottomOf="@+id/passwordView" />

    <TextView
        android:id="@+id/passwordView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/passwordTitulo"
        app:layout_constraintStart_toStartOf="@+id/passwordTitulo"
        app:layout_constraintTop_toBottomOf="@+id/passwordTitulo" />

    <TextView
        android:id="@+id/nivelView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/nivelTitulo"
        app:layout_constraintStart_toStartOf="@+id/nivelTitulo"
        app:layout_constraintTop_toBottomOf="@+id/nivelTitulo" />

    <TextView
        android:id="@+id/idFacebookTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/idFacebook"
        style="@style/titulos"
        app:layout_constraintEnd_toEndOf="@+id/nivelView"
        app:layout_constraintStart_toStartOf="@+id/nivelView"
        app:layout_constraintTop_toBottomOf="@+id/nivelView" />

    <TextView
        android:id="@+id/idFacebookView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/idFacebookTitulo"
        app:layout_constraintStart_toStartOf="@+id/idFacebookTitulo"
        app:layout_constraintTop_toBottomOf="@+id/idFacebookTitulo" />

</android.support.constraint.ConstraintLayout>